--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,7 +1,7 @@
 <form method="POST">
     {% csrf_token %}
     {{ form }}
-    <button type="submit">Save</button>
+    <button type="submit">Sign Up</button>
 </form>
 
 
@@ -10,4 +10,4 @@
 
 
 
- 
+
