--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -10,18 +10,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
-     <nav class="navbar navbar-dark bg-dark">
+
+
+    
+    <nav class="navbar navbar-dark bg-dark px-4">
         <a href="#" class="navbar-brand">FoodApp</a>
-
-        <div class="navbar">
-            <a class="nav-item nav-link" href="{% url 'food:create_item' %}">Add Item</a>
-            <a class="nav-item nav-link" href="#" >Delete Item</a>
-            <a class="nav-item nav-link" href="#">Menu Item</a>
+      
+        <div class="d-flex justify-content-evenly w-100">
+          <a class="nav-item nav-link text-white" href="{% url 'food:create_item' %}">Add Item</a>
+          <a class="nav-item nav-link text-white" href="#">Delete Item</a>
+          <a class="nav-item nav-link text-white" href="#">Menu Item</a>
         </div>
+      </nav>
 
 
 
-     </nav>
+
         {% block body %}
         {% endblock %}
 </body>
